--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Run Project
         run: |
           cd workflows
-          npm
-          npm run checkin
+          yarn
+          yarn checkin
 
 #  SeaGold:
 #    needs: CheckIn
